--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -4,6 +4,8 @@ server:
 spring:
   cloud:
     gateway:
+      default-filters:
+        - name: LoggingFilter
       routes:
         - id: movieRoute #Identificando la ruta del service de producto
           uri: http://localhost:8083/ #URL donde se hará el redirect segun el predicate definido
@@ -13,6 +15,18 @@ spring:
           uri: http://localhost:8084/ #URL donde se hará el redirect segun el predicate definido
           predicates: #RReglas de análisis de una request
             - Path=/catalog/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: catalogService
+                fallbackUri: forward:/fallback/catalog
+
+info:
+  app:
+    name: $(spring.application.name)
+    version: 1.0.0
+    description: API Gateway
+
 eureka:
   client:
     service-url:
