--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -23,4 +23,4 @@ info:
   app:
     name: ${spring.application.name}
     version: 1.0.0
-    description: Series Microservice
+    description: Movie Microservice
