--- a/catalog-service-dev.yml
+++ b/catalog-service-dev.yml
@@ -41,3 +41,9 @@ management:
   health:
     circuitbreakers:
       enabled: true
+
+info: 
+  app:
+    name: ${spring.application.name}
+    version: 1.0.0
+    description: Catalog Microservice
