--- a/catalog-service-dev.yml
+++ b/catalog-service-dev.yml
@@ -4,12 +4,12 @@ server:
 spring:
   data:
     mongodb:
-        authentication-database: admin
-        username: rootuser
-        password: rootpass
-        database: catalog-db
-        port: 27017
-        host: localhost
+      authentication-database: admin
+      username: root
+      password: root
+      database: series-db
+      port: 27017
+      host: mongodb
   eureka:
     client:
       service-url:
