--- a/catalog-service-dev.yml
+++ b/catalog-service-dev.yml
@@ -7,7 +7,7 @@ spring:
       authentication-database: admin
       username: root
       password: root
-      database: series-db
+      database: catalogFinal
       port: 27017
       host: mongodb
   eureka:
@@ -15,27 +15,27 @@ spring:
       service-url:
         defaultZone: http://localhost:8761/eureka
  
- resilience4j:
-  circuitbreaker:
-    instances:
-      movies:
-        slidingWindowType: COUNT_BASED
-        slidingWindowSize: 5
-        failureRateThreshold: 50
-        automaticTransitionFromOpenToHalfOpenEnabled: true
-        waitDurationInOpenState: 15000
-        permittedNumberOfCallsInHalfOpenState: 3
-        registerHealthIndicator: true
-        allowHealthIndicatorToFail: false
-    series:
-        slidingWindowType: COUNT_BASED
-        slidingWindowSize: 5
-        failureRateThreshold: 50
-        automaticTransitionFromOpenToHalfOpenEnabled: true
-        waitDurationInOpenState: 15000
-        permittedNumberOfCallsInHalfOpenState: 3
-        registerHealthIndicator: true
-        allowHealthIndicatorToFail: false
+ #resilience4j:
+  #circuitbreaker:
+    #instances:
+      #movies:
+        #slidingWindowType: COUNT_BASED
+        #slidingWindowSize: 5
+        #failureRateThreshold: 50
+        #automaticTransitionFromOpenToHalfOpenEnabled: true
+        #waitDurationInOpenState: 15000
+        #permittedNumberOfCallsInHalfOpenState: 3
+        #registerHealthIndicator: true
+        #allowHealthIndicatorToFail: false
+    #series:
+        #slidingWindowType: COUNT_BASED
+        #slidingWindowSize: 5
+        #failureRateThreshold: 50
+        #automaticTransitionFromOpenToHalfOpenEnabled: true
+        #waitDurationInOpenState: 15000
+        #permittedNumberOfCallsInHalfOpenState: 3
+        #registerHealthIndicator: true
+        #allowHealthIndicatorToFail: false
         
 management: 
   health:
@@ -46,4 +46,4 @@ info:
   app:
     name: ${spring.application.name}
     version: 1.0.0
-    description: Catalog Microservice
+    description: Catalog Microservice (Camila Gauto)
