--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -7,20 +7,16 @@ spring:
       service-url:
         defaultZone: http://localhost:8761/eureka
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;
-    username: sa
-    password: sa
-  sql:
-    init:
-      data-locations: classpath:movies.sql
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://mysql:3306/backendFinal
+    username: user
+    password: pass
   jpa:
-    defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       
 info: 
   app:
     name: ${spring.application.name}
     version: 1.0.0
-    description: Movie Microservice
+    description: Movie Microservice Camila Gauto
