--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -2,21 +2,17 @@ server:
   port: 8083
 
 spring:
-  eureka:
-    client:
-      service-url:
-        defaultZone: http://localhost:8761/eureka
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql:3306/backendFinal
-    username: user
-    password: pass
   jpa:
     hibernate:
       ddl-auto: update
+  datasource:
+    url: jdbc:mysql://mysql:3306/backendFinal
+    username: user
+    password: pass
+    driver-class-name: com.mysql.cj.jdbc.Driver
       
 info: 
   app:
     name: ${spring.application.name}
     version: 1.0.0
-    description: Movie Microservice Camila Gauto
+    description: Movie Microservice (Camila Gauto)
